Gist: Fix hover backgrounds on truncated text

--- a/github-dark.css
+++ b/github-dark.css
@@ -183,7 +183,8 @@
   .marketing-nav a.selected, #graph_data .tabs, .org-nav-item.selected, .edit-team-member:hover, tr.commit,
   .release-timeline .js-details-container, .section-heading-title a.js-selected-navigation-item, .featured-callout .screenshot,
   .ace-github, .sidebar-module ul ul li a:hover, .sidebar-module h3 a:hover, .timeline-commits .commit-meta .status,
-  .timeline-commits .commit-meta .octicon, .file .meta-divider, .markdown-body, .avatar-stack.multiple-avatars:before {
+  .timeline-commits .commit-meta .octicon, .file .meta-divider, .markdown-body, .avatar-stack.multiple-avatars:before,
+  .css-truncate:hover .css-truncate-target {
     background: transparent !important;
   }
   .select-menu-item .octicon {
